2010-06-12  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Use ‘gmtime_r’, ‘localtime_r’.

	* base.h: Comment munging; nfc.
	* maketime.h (struct maketimestuff): Add member ‘time2tm_stash’.
	* maketime.c (time2tm): Use ‘gmtime_r’, ‘localtime_r’.
	* rcstime.c (date2str): Use ‘localtime_r’.

2010-06-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[build] Build rcsfreeze with substituted ‘PACKAGE_VERSION’.

	* Makefile.am (rcsfreeze): New target.

2010-06-10  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Make ‘--help’ output say "repository", not "RCS file".

	* ci.c: In ‘--help’ comment, say "repository", not "RCS file".
	* co.c: Likewise.
	* rcs.c: Likewise.
	* rcsclean.c: Likewise.
	* rcsdiff.c: Likewise.
	* rcsfreeze.sh: Likewise.
	* rcsmerge.c: Likewise.
	* rlog.c: Likewise.

2010-06-09  Thien-Thi Nguyen  <ttn@gnuvola.org>

	Relax syntax of id, sym to accept string of all digits.

	* rcsmap.c (checkidentifier): Flag ‘DIGIT’ as identifier, as well.
	* alive.test: Update to test using state "42".

2010-06-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstractions: MEM_SAME, MEM_DIFF

	* base.h (MEM_SAME, MEM_DIFF): New macros.
	* b-anchor.c (looking_at): Use ‘MEM_SAME’.
	* rcs.c (main): Use ‘MEM_DIFF’.
	* rcsfcmp.c (rcsfcmp): Likewise.
	* rcsfnms.c (rcssuffix, pairnames): Use ‘MEM_SAME’.

2010-06-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstractions: {NUM,DATE}_{LT,EQ,GT}, NUMF_{LT,EQ}

	* base.h (GENERIC_COMPARE, GENERIC_LT, GENERIC_EQ)
	(GENERIC_GT, NUM_LT, NUM_EQ, NUM_GT, DATE_LT, DATE_EQ)
	(DATE_GT, NUMF_LT, NUMF_EQ): New macros.
	* ci.c (addbranch, addelta, getlogmsg, main): Use new macros.
	* co.c (getancestor): Likewise.
	* rcs.c (removerevs, setlock, dolocks, rcs_setstate, main): Likewise.
	* rcsrev.c (genbranch, genrevs): Likewise.
	* rlog.c (recentdate, extdate): Likewise.

2010-06-01  Thien-Thi Nguyen  <ttn@gnuvola.org>

	[int] Add abstraction: PROB

	* base.h (PROB): New macro.
	* b-excwho.c (set_uid_to): Use ‘PROB’.